--- a/index.html
+++ b/index.html
@@ -7,10 +7,37 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+		
+    <!-- Custom CSS -->
+		<link href="styles.css" rel="stylesheet" />
 
-    <title>Hello, world!</title>
+    <title>YilongGoWhere</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+		<div class="masthead">A Geekout Workshop Site</div>
+
+		<div class="header">
+    	<h1>Welcome to YilongGoWhere!</h1>
+			<p>Yi Long's personal stash of resources!</p>
+		</div>
+
+		<section>
+			<h2>Resources</h2>
+
+			<div class="card">
+				<img src="https://tr-images.condecdn.net/image/wjWbzdMg4pj/crop/1440/0.5235602094240838/f/Blue-domed-church-along-caldera-edge-in-Oia-Santorini-greece-conde-nast-traveller-11aug17-iStock.jpg" class="card-img-top" alt="...">
+				<div class="card-body">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+					<a href="https://en.wikipedia.org/wiki/Santorini" class="btn btn-primary">Go somewhere</a>
+				</div>
+			</div>
+		</section>
+
+		<footer>
+			<small>
+				<b>Geekout 2021</b> | <i>Made For GovTech's Geekout Web Dev Workshop</i>
+			</small>
+		</footer>
   </body>
 </html>
