--- a/index.html
+++ b/index.html
@@ -7,37 +7,47 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-		
+
     <!-- Custom CSS -->
 		<link href="styles.css" rel="stylesheet" />
 
-    <title>YilongGoWhere</title>
+    <title>(X)GoWhere</title>
   </head>
   <body>
 		<div class="masthead">A Geekout Workshop Site</div>
 
 		<div class="header">
-    	<h1>Welcome to YilongGoWhere!</h1>
-			<p>Yi Long's personal stash of resources!</p>
+    	<h1>Welcome to VaccinationGoWhere!</h1>
+			<p>Find available vaccine locations on this website</p>
 		</div>
 
 		<section>
-			<h2>Resources</h2>
+			<div class="container">
+				<h2>Vaccine locations</h2>
 
-			<div class="card">
-				<img src="https://tr-images.condecdn.net/image/wjWbzdMg4pj/crop/1440/0.5235602094240838/f/Blue-domed-church-along-caldera-edge-in-Oia-Santorini-greece-conde-nast-traveller-11aug17-iStock.jpg" class="card-img-top" alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Card title</h5>
-					<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-					<a href="https://en.wikipedia.org/wiki/Santorini" class="btn btn-primary">Go somewhere</a>
+				<!-- Row 1-->
+				<div class="row">
+					<!-- Col 1 of Row 1-->
+					<div class="col-4">
+						<div class="card">
+							<img src="https://tr-images.condecdn.net/image/wjWbzdMg4pj/crop/1440/0.5235602094240838/f/Blue-domed-church-along-caldera-edge-in-Oia-Santorini-greece-conde-nast-traveller-11aug17-iStock.jpg" class="card-img-top" alt="...">
+							<div class="card-body">
+								<h5 class="card-title">Card title</h5>
+								<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+								<a href="https://en.wikipedia.org/wiki/Santorini" class="btn btn-primary">Go somewhere</a>
+							</div>
+						</div>
+					</div>
+					<!-- Col 2 of Row 1-->
+					<div class="col-4"></div>
+					<!-- Col 3 of Row 1-->
+					<div class="col-4"></div>
 				</div>
 			</div>
 		</section>
 
 		<footer>
-			<small>
-				<b>Geekout 2021</b> | <i>Made For GovTech's Geekout Web Dev Workshop</i>
-			</small>
+				Geekout 2021| Made For GovTech's Geekout Web Dev Workshop
 		</footer>
   </body>
 </html>
