Use classes instead of html element

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 			<p>Find available vaccine locations on this website</p>
 		</div>
 
-		<section>
+		<div class="main">
 			<div class="container">
 				<h2>Vaccine locations</h2>
 
@@ -44,10 +44,10 @@
 					<div class="col-4"></div>
 				</div>
 			</div>
-		</section>
+		</div>
 
-		<footer>
+		<div class="footer">
 				Geekout 2021| Made For GovTech's Geekout Web Dev Workshop
-		</footer>
+		</div>
   </body>
 </html>
